# fMRI_Cubical_Persistence

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: annotations.csv  annotations.xlsx  participant_ages.csv  participant_groups.csv  participant_groups.xlsx
data/summary_statistics/: Summary_statistics_masked.json  Summary_statistics_masked_normalised.json  (+1 more)
ephemeral/: Makefile  analyse_clusterings.py  analyse_variability.py  analyse_variability_across_cohorts.py  analyse_variance.py  animate_persistence_diagrams.py  baseline_autocorrelation.py  baseline_autocorrelation_parcellated.py  calculate_embeddings.py  calculate_embeddings_persistence_images.py  cluster_baseline_autocorrelation.py  cluster_persistence_diagrams.py  cluster_persistence_diagrams_distance.py  cluster_persistence_images.py  cluster_summary_statistics.py  compute_curvature.py  create_feature_matrix.py  curvature.py  dipha2json.py  embed_baseline_autocorrelation.py  embed_cluster_distance_matrices.py  embed_summary_statistics.py  evaluate_clustering.py  evaluate_persistence_images.py  evaluate_trajectories.py  evaluate_trajectories_persistence.py  extract_persistence_diagrams.py  features.py  mask_parcellated_data.py  matrix2dipha.py  nifti2matrix.py  nifti2matrix_parcellated.py  peri_histogram_analysis.py  peri_histogram_bootstrap_analysis.py  persistent_homology_matrices.py  plot.py  plot_betti_surface.py  plot_dendrogram.py  plot_persistence_diagram.py  plot_persistence_diagrams.py  (+17 more)
scripts/: nifti2matrix  nifti2matrix_normalised  persistent_homology_dipha
(+2028 files in other folders)
