[tool.poetry]
name = "ephemeral"
version = "0.1.0"
description = "fMRI analysis using topological methods"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7"
nilearn = "^0.6.1"
pytest = "^5.3.5"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
