[tool.poetry]
name = "ephemeral"
version = "0.1.0"
description = "fMRI analysis using topological methods"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.6.5"
nilearn = "^0.6.1"
pytest = "^5.3.5"
matplotlib = "^3.1.3"
tqdm = "^4.42.1"
pandas = "^1.0.1"
seaborn = "^0.10.0"
scikit-learn = "^0.22.2"
persim = {git = "ssh://git@github.com/BorgwardtLab/persim.git"}
pyper = {git = "ssh://git@github.com/Pseudomanifold/pyper.git"}
m-phate = "^0.1.6"
scprep = "^1.0.4"
xlrd = "^1.2.0"
python-igraph = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
